# rules_swift_previews

./: .gitattributes  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  defs.bzl  extensions.bzl
.bcr/: README.md  config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: buildifier.yaml  ci.yaml  publish.yaml  release.yaml  release_prep.sh
examples/basic/: .bazelrc  MODULE.bazel
examples/basic/Views/: BUILD.bazel  HelloView.swift
examples/c_objc_interop/: .bazelrc  BUILD.bazel  MODULE.bazel  SystemDemoView.swift
examples/c_objc_interop/CHelpers/: CompressionHelpers.c  CompressionHelpers.h  CryptoHelpers.c  CryptoHelpers.h  SystemInfo.c  SystemInfo.h  TimingHelpers.c  TimingHelpers.h  UserInfo.c  UserInfo.h  module.modulemap
examples/c_objc_interop/ObjCBridge/: SystemBridge.h  SystemBridge.m
examples/c_objc_interop/SwiftWrapper/: SystemUtilities.swift
examples/multi_level_deps/: BUILD.bazel  MODULE.bazel
examples/multi_level_deps/DesignSystem/: BUILD.bazel  DesignSystem.swift
examples/multi_level_deps/Theme/: BUILD.bazel  Theme.swift
examples/multi_level_deps/Views/: BUILD.bazel  WelcomeView.swift
examples/swift_resources_deps/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/swift_resources_deps/Resources/: BUILD.bazel
examples/swift_resources_deps/Resources/Resources/: colors.json
examples/swift_resources_deps/Views/: BUILD.bazel  ResourceView.swift
internal/: BUILD.bazel  cc_collector.bzl  core.bzl  objc_collector.bzl  package_generator.bzl  providers.bzl  repo_rule.bzl  script_generator.bzl  swift_collector.bzl
internal/templates/: BUILD.bazel  BUILD.bazel.tpl  defs_basic.bzl.tpl  defs_with_sr.bzl.tpl
tests/: BUILD.bazel  aspect_tests.bzl  package_generator_tests.bzl  script_generator_tests.bzl
tests/fixtures/: App.swift  BUILD.bazel  Core.swift  Simple.swift  Utils.swift
