"""Root BUILD file for rules_swift_previews."""

load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "extensions.bzl",
    "defs.bzl",
])

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//internal:core",
        "//internal:providers",
    ],
)
