"""Internal implementation for rules_swift_previews."""

load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "package_generator",
    srcs = ["package_generator.bzl"],
)

bzl_library(
    name = "script_generator",
    srcs = ["script_generator.bzl"],
)

bzl_library(
    name = "cc_collector",
    srcs = ["cc_collector.bzl"],
)

bzl_library(
    name = "objc_collector",
    srcs = ["objc_collector.bzl"],
)

bzl_library(
    name = "swift_collector",
    srcs = ["swift_collector.bzl"],
)

bzl_library(
    name = "core",
    srcs = ["core.bzl"],
    deps = [
        ":cc_collector",
        ":objc_collector",
        ":package_generator",
        ":providers",
        ":script_generator",
        ":swift_collector",
    ],
)
