# Example: C and Objective-C Interop
# Demonstrates swift_previews_package with cc_library and objc_library dependencies
#
# Dependency chain (4 levels, 3 languages):
#
#   SecureInputView (SwiftUI)
#          |
#          v
#   SecureStorage (Swift API)
#          |
#          v
#   KeychainBridge (Objective-C)  <-- wraps Security.framework
#          |
#          v
#   CryptoHelpers (C)  <-- low-level crypto utilities

module(
    name = "c_objc_interop_example",
    version = "0.0.1",
)

# Use local rules_swift_previews (two levels up)
local_path_override(
    module_name = "rules_swift_previews",
    path = "../..",
)

bazel_dep(name = "rules_swift_previews", version = "0.0.1")
bazel_dep(name = "rules_swift", version = "3.4.1")
bazel_dep(name = "apple_support", version = "1.17.1")

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")
