# Example: Multi-level dependencies (Views -> Theme -> DesignSystem)
# Demonstrates swift_previews_package with transitive module dependencies

module(name = "multi_level_deps_example", version = "0.0.1")

# Use local rules_swift_previews (two levels up)
local_path_override(
    module_name = "rules_swift_previews",
    path = "../..",
)

bazel_dep(name = "rules_swift_previews", version = "0.0.1")
bazel_dep(name = "rules_swift", version = "3.4.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "apple_support", version = "1.17.1")

# Configure swift_previews (basic mode - no sr binary needed for this example)
swift_previews = use_extension(
    "@rules_swift_previews//:extensions.bzl",
    "swift_previews",
)
swift_previews.configure()
use_repo(swift_previews, "swift_preview_rules")

# Apple toolchain configuration
apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")
