# Example: Swift Resources Dependencies
# Demonstrates swift_previews_package with swift_resources_library for bundled resources

module(name = "swift_resources_deps_example", version = "0.0.1")

# Use local rules_swift_previews (two levels up)
local_path_override(
    module_name = "rules_swift_previews",
    path = "../..",
)

bazel_dep(name = "rules_swift_previews", version = "0.0.1")
bazel_dep(name = "rules_swift", version = "3.4.1")
bazel_dep(name = "rules_swift_resources", version = "0.2.0")
bazel_dep(name = "apple_support", version = "2.0.0")

# Enable swift_previews with rules_swift_resources integration
swift_previews = use_extension(
    "@rules_swift_previews//:extensions.bzl",
    "swift_previews",
)
swift_previews.use_swift_resources()
use_repo(swift_previews, "swift_previews")

# Apple toolchain configuration
apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")
