# Example: Swift Resources Dependencies
# Demonstrates swift_previews_package with swift_resources_library for bundled resources

module(
    name = "swift_resources_deps_example",
    version = "0.0.1",
)

# Use local rules_swift_previews (two levels up)
local_path_override(
    module_name = "rules_swift_previews",
    path = "../..",
)

bazel_dep(name = "rules_swift_previews", version = "0.0.1")
bazel_dep(name = "rules_swift", version = "3.4.1")
bazel_dep(name = "rules_swift_resources", version = "0.3.1")
bazel_dep(name = "apple_support", version = "2.0.0")

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")
