load("@rules_swift//swift:swift.bzl", "swift_library")
load("@rules_swift_previews//:defs.bzl", "SWIFT_PREVIEW_EXCLUDES", "swift_previews_package")

swift_library(
    name = "ExampleViews",
    srcs = glob(
        ["*.swift"],
        exclude = SWIFT_PREVIEW_EXCLUDES,
    ),
    module_name = "ExampleViews",
    visibility = ["//visibility:public"],
    deps = [
        "//DesignSystem",
        "//Theme",
    ],
)

swift_previews_package(
    name = "previews",
    lib = ":ExampleViews",
    macos_version = "14",
)
